--- a/velas/templates/detail.html
+++ b/velas/templates/detail.html
@@ -23,7 +23,7 @@
 
     <main>
         
-        <img src="{{ produto.foto.url }}" alt="foto do produto">
+        <img class='foto-detail' src="{{ produto.foto.url }}" alt="foto do produto">
 
         <div>
             <h3>{{ produto.categoria}} {{ produto.essencia }}</h3>
@@ -31,7 +31,7 @@
             <p>Selecione o tamanho:</p>
             <select name="tamanho" id="tamanho">
                 {% for tamanho in tamanhos_disponiveis %}
-                    <option value="{{ tamanho.id }}">{{ tamanho.nome_tamanho }}</option>
+                    <option value="{{ tamanho.id }}">{{ tamanho.nome_tamanho }} {{tamanho.peso}}</option>
                 {% endfor %}
                 <br>
             </select>
@@ -40,14 +40,29 @@
                 <input type="number" id="quantity" value="1" min="1">
                 <button class="btn-increment" onclick="updateQuantity(1)">+</button>
             </div>
+            <form action="" method="GET">
+                {% csrf_token %}
+                <label for="cep">Calcular Frete:</label><br>
+                <input type="text" id="cep" name="cep" placeholder="Digite o seu CEP" required>
+                <button type="submit">Calcular</button>
+            </form>
+            {% if frete %}
+                <h3>Opções de Frete:</h3>
+                <ul>
+                    {% for item in frete %}
+                    <li>
+                        Serviço: {{item.name}} - Preço: R${{item.price | floatformat:2}} - Prazo: {{item.delivery_time}} dias
+                    </li>
+                    {% endfor %}
+                </ul>
+            {% elif frete_erro %}
+                <p class="error">{{frete_erro}}</p>
+            {% endif %}
+
+            <button type="submit" class="btn-add-cart">Comprar</button>
         </div>
 
-        <form action="" method="POST">
-            {% csrf_token %}
-            <label for="cep">Calcular Frete:</label>
-            <input type="text" id="cep" name="cep" placeholder="Digite o seu CEP" required>
-            <button type="submit">Calcular</button>
-        </form>
+        
     </main>
 
     <script>
