Criação de uma pasta separada para scripts em JS e formatação nas opções de frete e mensagem de erro ao tentar buscar um CEP inválido.

--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -128,3 +128,18 @@ input[type=number]::-webkit-outer-spin-button{
     margin-top: auto;
     margin-left: auto;
 }
+
+.modal-header.bg-danger {
+    background-color: #dc3545; 
+    color: white;
+}
+
+.modal-body p {
+    font-size: 16px;
+    font-weight: normal !important;
+}
+
+.text-erro-frete{
+    color: #000 !important;
+
+}
