--- a/velas/templates/base.html
+++ b/velas/templates/base.html
@@ -17,6 +17,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
+    <script src="{% static 'js/main.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
@@ -82,7 +83,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p>Try scrolling the rest of the page to see this option in action.</p>
+            <p displayCart()></p>
         </div>
     </div>
 
@@ -145,25 +146,5 @@
     </div>
 </footer>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-    const cartCountElement = document.getElementById("cart-count");
-    const buyButton = document.querySelector(".btn-add-cart");
-    const quantityInput = document.getElementById("quantity");
-
-    if (buyButton && cartCountElement && quantityInput) {
-        buyButton.addEventListener("click", function () {
-        let currentCount = parseInt(cartCountElement.textContent);
-        let selectedQuantity = parseInt(quantityInput.value);
-
-        cartCountElement.textContent = currentCount + selectedQuantity;
-        });
-    }
-    });
-</script>
-
-
-
-    
 </body>
 </html>
