Alteração no front-end para melhor vizualização das opções de frete disponíveis e inclusão de dois novos models para melhor controle do carrinho de compras para o cliente e para a empresa.

--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -143,3 +143,23 @@ input[type=number]::-webkit-outer-spin-button{
     color: #000 !important;
 
 }
+
+
+.fretes{
+    margin-top: 50px;
+    padding: 15px;
+    background-color: transparent;
+    border: solid;
+    border-color: #00154E;
+    border-radius: 8px;
+}
+
+.info-frete{
+    display: flex;
+    justify-content: space-between ;
+}
+
+.valor-frete{
+    color: #00154E;
+    font-weight: bold;
+}
