--- a/velas/templates/home.html
+++ b/velas/templates/home.html
@@ -37,7 +37,7 @@
                         <img class="card-img-top" src="{{ vela.foto.url }}" alt="Imagem de capa do card">
                         <h3>{{vela.categoria}}</h3>
                         <h4>{{vela.tamanhos}}</h4>
-                        <p>R$ {{vela.valor}}</p>
+                        <p class="text-valor">R$ {{vela.valor}}</p>
                         
                         <button class="buy"><img src="{% static 'img/bag-items2.png' %}" alt="sacola de compras" class="bag"></button>
                       </div>
