--- a/velas/templates/produtos.html
+++ b/velas/templates/produtos.html
@@ -29,9 +29,9 @@
                     <div class="card-pai">
                         <div class="card">
                             <img class="card-img-top" src="{{ produto.foto.url }}" alt="Imagem de capa do card">
-                            <h3>{{produto.categoria}}</h3>
-                            <h4>{{produto.tamanhos}}</h4>
-                            <p>R$ {{produto.valor}}</p>
+                            <h3 class="text-categoria">{{produto.categoria}}</h3>
+                            <h4 class="text-tamanho">{{produto.tamanhos}}</h4>
+                            <p class="text-valor">R$ {{produto.valor}}</p>
                             <button class="buy"><img src="{% static 'img/bag-items2.png' %}" alt="sacola de compras" class="bag"></button>
                         </div>
                     </div>
