--- a/velas/templates/sobre.html
+++ b/velas/templates/sobre.html
@@ -22,14 +22,14 @@
 <body>
     {% block content %}
     <main>
-        <h1>
+        <h1 class="title-sobre">
             Quem Somos
             <hr>
         </h1>
-        <h3>
+        <h3 class="sub-title-sobre">
             Bem-vindos à nossa encantadora loja de velas veganas e artesanais.
         </h3>
-        <p>
+        <p class="text-sobre">
             Do latim Balsamun, surgiu a BALM, criada por mãe e filha, em Sapiranga, RS e agora para todo o país. <br>
             Com o objetivo de iluminar, esclarecer, ilustrar e ensinar. <br>
             Através de velas aromáticas  que contém o aroma mais potente e singular do mercado. <br>
