--- a/static/css/base.css
+++ b/static/css/base.css
@@ -202,6 +202,7 @@ footer.bg-body-tertiary{
 #offcanvasRight{
     border-bottom-left-radius: 10px !important;
     border-top-left-radius: 10px;
+    background-color: #F4F4F9;
 }
 
 .offcanvas-header{
@@ -218,4 +219,61 @@ footer.bg-body-tertiary{
 
 .btn-close{
     color: #F4F4F9 !important;
+}
+
+.offcanvas-body {
+    padding: 20px;
+    background-color: #F4F4F9;
+    border-radius: 10px;
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #F4F4F9 !important;
+    border: 1px solid #F4F4F9 !important;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.cart-item p {
+    display: flexbox;
+    flex-direction: row !important;
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+    text-align: center;
+    align-items: start;
+}
+
+
+.btn-remove-item {
+    background-color: #ff4d4d;
+    color: #F4F4F9 !important;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    
+}
+
+.btn-remove-item:hover {
+    background-color: #cc0000;
+}
+
+.empty-cart-message {
+    text-align: center;
+    font-size: 18px;
+    color: #888;
+    margin-top: 20px;
+}
+
+.foto-prod-cart{
+    width: 50px !important;
+    border-radius: 5px;
+    margin-right: 10px;
 }
