--- a/static/css/home.css
+++ b/static/css/home.css
@@ -109,7 +109,7 @@ h1{
         text-align: center;
     }
 
-    p{
+    .text-valor{
         font-weight: bold;
         color: #00154E;
         text-align: center;
