--- a/velas/templates/base.html
+++ b/velas/templates/base.html
@@ -83,7 +83,8 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p displayCart()></p>
+            <div id="cart-items">
+            </div>
         </div>
     </div>
 
