--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,7 @@ header{
 
 .container-fluid .navbar-brand img{
     max-height: 100px;
+    object-fit: fill;
 }
 
 #navbarSupportedContent a{
@@ -102,4 +103,31 @@ header{
 
 .bi-search, .bi-person, .bi-bag{
     font-size: 20px !important;
+}
+
+footer{
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    bottom: 0;
+    background-color: #021F59;
+    color: #F2F0EB;
+}
+
+.foot-icons{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    gap: 20px;
+}
+
+.foot-icons a i{
+    color: #F2F0EB;
+    font-size: large;
+    transition: .5s;
+}
+
+.foot-icons a i:hover{
+    color: #F2921D;
+    transition: .2s;
 }
