--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,259 +1,86 @@
 @charset "UTF-8";
 
-/*
-azul royal: #00154E
-branco fantasma: #F4F4F9
-azul: #1D84B5
-*/
-
-
-.slider{
-    width: 1519px;
-    height: 401.75px;
-
-    img{
-        width: 100%;
-        
-    }
+main{
+    min-height: 90vh;
+    background-color: #F2F0EB;
 }
 
-main{
-    overflow: hidden;
-    position: relative;
+.splide__slide img {
     width: 100%;
     height: auto;
-    background-color: #F4F4F9;
-    align-items: center;
+}
+
+.conheca{
+    padding: 50px;
+    background-color: #F2F0EB;
+}
+
+.conheca .section-title h2{
+    color: #403A20;
+}
+
+.section-title{
     text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 0px 50px 50px 50px;
-    box-shadow: 2px 2px 25px #00000068;
-    justify-content: space-around;
-    transition: 2s;
+    font-family: "Young Serif", Arial, Helvetica, sans-serif;
+    margin-bottom: 3rem;
 }
 
-.grid-prod{
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    margin-right: auto;
-    margin-left: auto;
-    align-items: center;
+.container-produtos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
-.link-prod{
-    text-decoration: none;
+.splide__pagination {
+    bottom: -2rem;
+    z-index: 5;
 }
 
-.link-prod:hover{
-    text-decoration: none;
+.slide-card {
+    display: flex;
+    justify-content: center;
+    width: 100%; 
 }
-
-h1{
-    color: #000;
-    display: block;
-    text-align: center;
-    padding-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-
-.card-pai{
-    display: inline-flex;
-    box-sizing: content-box;
-    height: 480px;
-}
-
 
 .card{
-    object-fit: contain;
-    overflow: hidden;
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-    margin-top: 10px;   
-    display: inline-block;
-    box-sizing: border-box;
-    margin: 1rem;
-    width: 300px;
-    height: auto;
-    text-align: center;
-    background-color: rgba(128, 128, 128, 0);
-    transition: 1s;
-    border: none;
-    padding-bottom: 5px;
-    
+    width: 286.4px !important;
 }
 
+.card-img{
+    height: 286.4px !important;
+}
 
-.card-img-top{
-    width: 280px;
-    height: 250px;
-    margin: auto;
-    margin-bottom: 15px;
-    border-radius:  8px 8px 8px 8px;
-    margin-top: 9.200px;
+.card-img img{
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
-    h3{
-        color: #000;
-        font-size: 18px;
-        text-align: center;
-    }
-
-    h4{
-        font-size: 16px;
-        color: #000;
-        text-align: center;
-    }
-
-    .text-valor{
-        font-weight: bold;
-        color: #00154E;
-        text-align: center;
-    }
-
-    .buy{
-        color: #00154E;
-        display: none;
-        transition: 0.4s;
-    }
-
-.bag{
-    width: 40px;
-    transition: 0.5s;
-    border-radius: 10px;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    cursor: pointer;
+.btn-veja-mais{
+    border-color: #403A20;
+    background-color: #403A20;
+    transition: .3s;
 }
 
-.bag:hover{
-    background-color: #00154e3d;
-    border-radius: 10px;
-    padding: 5px;
-    transition: 0.5s;
-    cursor: pointer;
+.btn-veja-mais:hover{
+    background-color: #504a30;
+    border-color: #504a30;
+    transition: .3s;
 }
 
-.card:hover{
-    transform: scale(1.05);
-    transition: 1s;
-    
-
-    .buy{
-        display: inline-block;
-        border-style: none;
-        border-radius: 10px;
-        background-color: #00000000;
-        color: #00154E;
-        font-weight: bolder;
-        text-align: center;
-        align-items: center;
-        transition: 0.4s;
-    }
-
-
-
-
+.destaques{
+    background-color: #1E3259;
+    padding: 50px;
 }
 
-.see-more{
-    position: sticky;
-    margin-top: 20px;
-    color:#00154E;
-    border-radius: 10px;
-    padding: 5px;
-    border-style:solid;
-    border-color: #00154E;
-    transition: 0.5s;
-    cursor: pointer;
+.destaques .section-title h2{
+    color: #F2F0EB;
 }
 
-.see-more:hover{
-    background-color: #00154E;
-    color: #F4F4F9;
-    transition: 0.5s;
+.card-text{
+    margin: 0;
 }
 
-.moments{
-    display: inline-block;
-    background-color: #00154E;
-    width: 100%;
-    align-items: center;
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    padding-bottom: 40px;
-    justify-content: center;
+.text-default{
+    color: #757575;
 }
-
-    h2{
-        color: #F4F4F9;
-        padding: 40px;
-    }
-
-    .carousel-item{
-        display: flexbox;
-        width: 80%;
-        margin-right: auto;
-        margin-left: auto;
-        align-items: center;
-        justify-content: center;
-        transition: transform 5s ease-in-out;
-        object-fit: cover;
-    }
-
-    .text-moments{
-        color: #F4F4F9;
-        text-align: center;
-        font-weight: lighter;
-        padding-top: 50px;
-        margin: 0 60px 0 60px;
-
-    }
-
-
-.events{
-    background-color: #F4F4F9;
-    text-align: center;
-    align-items: center;
-    padding-bottom: 40px;
-}
-    .title-events{
-        color: #000;
-    }
-
-.carousel-inner{
-    display: flex;
-}
-
-.carousel-events{
-    width: 80%;
-    img{
-        width: 100%;
-        height: 500px;
-        margin-bottom: 50px;
-    }
-}
-
-    .text-events{
-        color: #000;
-        text-align: center;
-        font-weight: lighter;
-        margin: 0 60px 0 60px;
-    }
-
-    .no-results{
-        padding-top: 80px;
-    }
-
-.w-100{
-    align-items: center;
-    justify-content: center;
-    
-}
-
-
